--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
   "license": "UNLICENSED",
   "private": true,
   "scripts": {
-    "test": "live-server --open=./SpecRunner.html --port=8081",
-    "postinstall": "curl -s https://raw.githubusercontent.com/reactorcore/pomander/master/bin/install | bash"
+    "live-server": "live-server --open=./SpecRunner.html --port=8081", 
+    "pomander": "curl -s https://raw.githubusercontent.com/reactorcore/pomander/master/bin/install | bash",
+    "babel": "babel . --out-dir compiled --presets=es2015,react --ignore=node_modules,compiled --source-maps inline --watch"
   },
   "dependencies": {
     "bootstrap": "^4.0.0-alpha.2",
